--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "third_party/CLI11"]
 	path = third_party/CLI11
 	url = https://github.com/CLIUtils/CLI11.git
+[submodule "third_party/json"]
+	path = third_party/json
+	url = https://github.com/nlohmann/json
