[rt] add cuda runtime

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ set(LLVM_BUILT_URL https://releases.llvm.org/9.0.0/${LLVM_PKG})
 set(JSONLIB_URL https://github.com/nlohmann/json/releases/download/v3.10.5/json.tar.xz)
 set(ANTLR_URL https://www.antlr.org/download/antlr4-cpp-runtime-4.7.2-source.zip)
 
+find_package(CUDA REQUIRED)
+message(STATUS "Found CUDA ${CUDA_VERSION_STRING} at ${CUDA_TOOLKIT_ROOT_DIR}")
+find_package(CUDAToolkit REQUIRED)
+
 FetchContent_Declare(json URL ${JSONLIB_URL} URL_HASH MD5=4b67aba51ddf17c798e80361f527f50e)
 FetchContent_MakeAvailable(json)
 
@@ -82,20 +86,23 @@ add_executable(fx
     ${Antlr4Parser}
     src/typecheck.cc
     src/codegen.cc
+    src/cudart.cc
     src/main.cc
 )
 
 include_directories(${CMAKE_SOURCE_DIR}/src)
+include_directories("${CUDA_INCLUDE_DIRS}")
 include_directories(${CMAKE_SOURCE_DIR}/src/antlr4)
 include_directories(${ANTLR_DIR}/runtime/src)
 include_directories(${CMAKE_SOURCE_DIR}/third_party/CLI11/include)
 include_directories(${LLVM_INCDIR})
+include_directories(/usr/include)
 
 add_subdirectory(${CMAKE_SOURCE_DIR}/third_party/fmt)
 add_subdirectory(${CMAKE_SOURCE_DIR}/third_party/CLI11)
 
-target_link_libraries(fx PRIVATE fmt)
-target_link_libraries(fx PRIVATE LLVMCore)
-target_link_libraries(fx PRIVATE nlohmann_json::nlohmann_json)
+SET(CU_LINKER "-lcuda -lcudart")
+target_link_libraries(fx PRIVATE fmt nlohmann_json::nlohmann_json)
+target_link_libraries(fx PRIVATE LLVMCore CUDA::cudart ${CU_LINKER})
 target_link_libraries(fx PRIVATE antlr4_static)
 
